--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node enforce-foo-bar.test.js",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "lint": "eslint example.js"
   },
   "keywords": [],
   "author": "",
