--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node enforce-foo-bar.test.js",
+    "test": "node eslint-rules/enforce-foo-bar.test.js",
     "format": "prettier . --write",
     "lint": "eslint example.js"
   },
