--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "node eslint-rules/enforce-foo-bar.test.js",
+    "test": "node eslint-rules/*.test.js",
     "format": "prettier . --write",
-    "lint": "eslint example.js"
+    "lint": "eslint",
+    "lint:i": "eslint --inspect-config"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "eslint": "^9.0.0",
     "prettier": "3.2.5"
   }
 }
