--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node eslint-rules/*.test.js",
+    "test": "vitest --config eslint-rules/vitest.config.js run",
     "format": "prettier . --write",
     "lint": "eslint",
     "lint:i": "eslint --inspect-config"
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^9.0.0",
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+    "vitest": "^1.4.0"
   }
 }
