--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "vitest --config eslint-rules/vitest.config.js run",
+    "test": "vitest --config eslint-rules-plugin/vitest.config.js run",
     "format": "prettier . --write",
     "lint": "eslint",
     "lint:i": "eslint --inspect-config"
