update: pckage.json

--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
     "eslint": "^9.0.0",
     "prettier": "3.2.5",
     "vitest": "^1.4.0"
-  }
+  },
+  "packageManager": "pnpm@8.15.6+sha256.01c01eeb990e379b31ef19c03e9d06a14afa5250b82e81303f88721c99ff2e6f"
 }
